--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,12 +91,12 @@
                 android:id="@+id/buttonSignIn"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"
-                android:text="Login"
+                android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
+                android:text="Login"/>
         </RelativeLayout>
 
         <TextView
