--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -124,12 +124,12 @@
                 android:id="@+id/buttonSignup"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="200dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"
-                android:text="Daftar"
+                android:layout_height="50dp"
                 android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
+                android:text="Daftar"/>
         </RelativeLayout>
 
         <TextView
